[package]
name = "diffsol-testing"
version = "0.1.0"
edition = "2024"

[dependencies]
criterion = "0.5.1"

diffsol = { git = "https://github.com/martinjrobins/diffsol.git", tag = "v0.5.3" }
diffsol_old = { git = "https://github.com/martinjrobins/diffsol.git", tag = "v0.3.0", package = "diffsol" }
nalgebra = "0.33.2"

[[bench]]
name = "diffsol"
harness = false
